--- a/control_inventario/app/templates/productos/productos.html
+++ b/control_inventario/app/templates/productos/productos.html
@@ -76,6 +76,8 @@
                 <a href="/consulta_categorias" class="scroll"><i class="bi bi-bookmark-fill"></i></a>
                 <a href="#" class="scroll"><i class="bi bi-cart-plus-fill"></i></a>
                 <a href="#" class="scroll"><i class="bi bi-cart-check-fill"></i></a>
+                <a class="scroll" href="{{ url_for('main.logout') }}"><i class="bi bi-power"></i></a>
+
                 
             </ul>
         </div>
