--- a/control_inventario/app/templates/login.html
+++ b/control_inventario/app/templates/login.html
@@ -63,7 +63,7 @@
             
            
             <div class="Registro">
-                <h4 id="texto">¿No tienes cuenta? <a id="registro" href="/registro">Regístrate</a></h4>
+                <h4 id="texto">Puedes iniciar sesión aquí </h4>
             </div>
 
             
