--- a/control_inventario/app/templates/productos/consulta_producto.html
+++ b/control_inventario/app/templates/productos/consulta_producto.html
@@ -28,7 +28,7 @@
         {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
     {% for category, message in messages %}
-     <div class="alert {% if category == 'success' %}alert-success{% elif category == 'error' %}alert-danger{% else %}alert-info{% endif %}" role="alert">
+     <div id="mensajesAlertas" class="alert {% if category == 'success' %}alert-success{% elif category == 'error' %}alert-danger{% else %}alert-info{% endif %}" role="alert">
         {{ message }}
       </div>
       <script>
@@ -40,7 +40,7 @@
     {% endfor %}
   {% endif %}
 {% endwith %}
-        <div class="card-body">
+        <div style="top:0;" class="card-body">
             <div class=" table-responsive">
                 <table  class="table table-striped  table-sm" id="tabla_productos">
                     <thead>
