--- a/control_inventario/app/templates/salidas/salidas.html
+++ b/control_inventario/app/templates/salidas/salidas.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+   
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -21,10 +21,16 @@
     <div class="menu">
         <ul class="fondo1">
             <img class="Logovista" src="/static/img/logov.jpeg" alt="">
-            <li>GLACER Glamur Cerámico S.A de C.V <p class="titulo">Atlacomulco-Vías</p> </li>
-            <div class="">
-                <input type="search" id="buscarproveedor" name="" placeholder="Buscar producto...">
-                <i id="buscar2" class="bi bi-search"></i> 
+            <li>GLACER Glamur Cerámico S.A de C.V <p class="titulo">Atlacomulco-Vías</p>  </li>
+            
+            <!-- <div class="contenido-buscar">
+                
+                <input type="search" id="search-input" name="search" placeholder="Buscar producto..." >
+                <i id="buscar" class="bi bi-search"></i> 
+            </div> -->
+
+            <div class="search-container">
+                <input type="text" id="search-input" class="" placeholder="Buscar..."><label for="search-input" class="jjj"><div class="lupa"><i id="buscar" class="bi bi-search"></i> </div></label>
             </div>
             
         </ul>
@@ -70,16 +76,20 @@
                 <a href="/entradas" class="scroll"><i class="bi bi-cart-plus-fill"></i></a>
                 <a href="/salidas" class="scroll"><i class="bi bi-cart-check-fill"></i></a>
                 <a href="/consulta_usuarios" class="scroll"><i class="bi bi-person-fill-add" style="font-size: 1.3em; margin: 0 3px 0 0;"></i></a>
-
                 <a class="scroll" href="{{ url_for('main.logout') }}"><i class="bi bi-power"></i></a>
+                
+
+
+                
             </ul>
         </div>
         
         
-        {% include 'proveedores/consulta_proveedor.html'%}
-        {% include 'proveedores/registrar_proveedor.html' %}
-        {% include 'proveedores/actualizar_proveedor.html' %}
-        {% include 'proveedores/eliminar_proveedor.html' %}
+        
+        {% include 'salidas/consulta_salidas.html'%}
+        
+        
+
         
     </div>
 
@@ -88,7 +98,11 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
-    <script src="/static/js/jsproveedor.js"></script>
+    <script src="/static/js/jsproductos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.17/jspdf.plugin.autotable.min.js"></script>
+    <script src="/static/js/paginacion.js"></script>
+
     
     
 
