--- a/control_inventario/app/templates/tinacos/consulta_tinacos.html
+++ b/control_inventario/app/templates/tinacos/consulta_tinacos.html
@@ -27,7 +27,7 @@
         {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
     {% for category, message in messages %}
-     <div class="alert {% if category == 'success' %}alert-success{% elif category == 'error' %}alert-danger{% else %}alert-info{% endif %}" role="alert">
+     <div id="mensajesAlertas" class="alert {% if category == 'success' %}alert-success{% elif category == 'error' %}alert-danger{% else %}alert-info{% endif %}" role="alert">
         {{ message }}
       </div>
       <script>
