--- a/control_inventario/app/templates/categorias/categorias.html
+++ b/control_inventario/app/templates/categorias/categorias.html
@@ -22,9 +22,10 @@
         <ul class="fondo1">
             <img class="Logovista" src="/static/img/logov.jpeg" alt="">
             <li>GLACER Glamur Cerámico S.A de C.V <p class="titulo">Atlacomulco-Vías</p> </li>
-            <div class="">
-                <input type="search" id="buscarcatgorias" name="" placeholder="Buscar producto...">
-                <i id="buscar2" class="bi bi-search"></i> </div>
+            
+            <div class="search-container">
+                <input type="text" id="search-input" class="" placeholder="Buscar..."><label for="search-input" class="jjj"><div class="lupa"><i id="buscar" class="bi bi-search"></i> </div></label>
+            </div>
             
         </ul>
         <div class="menu2">
