--- a/control_inventario/app/templates/muros/consulta_muros.html
+++ b/control_inventario/app/templates/muros/consulta_muros.html
@@ -31,7 +31,6 @@
         {{ message }}
       </div>
       <script>
-        // Cerrar automáticamente la alerta después de 5 segundos
         setTimeout(function() {
           $('.alert').alert('close');
         }, 1500);
@@ -109,48 +108,86 @@
     
 </main>
 
+
+
+<nav aria-label="Page navigation">
+    <ul class="pagination">
+        {% if pagination.has_prev %}
+        <li class="page-item">
+            <a class="page-link" href="{{ url_for('main.consulta_muros', page=pagination.prev_num, search=search) }}">
+                <i class="bi bi-chevron-left" style="color: #111;"></i>
+            </a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#"><i class="bi bi-chevron-left" style="color: #111;"></i></a>
+        </li>
+        {% endif %}
+
+        <li class="page-item {% if pagination.page == 1 %}active{% endif %}">
+            <a class="page-link" href="{{ url_for('main.consulta_muros', page=1) }}">1</a>
+        </li>
+
+        {% if pagination.page > 3 %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#">...</a>
+        </li>
+        {% endif %}
+
+        {% for page_num in range(pagination.page - 1, pagination.page + 1) %}
+            {% if page_num > 1 and page_num < pagination.pages %}
+            <li class="page-item {% if page_num == pagination.page %}active{% endif %}">
+                <a class="page-link" href="{{ url_for('main.consulta_muros', page=page_num) }}">{{ page_num }}</a>
+            </li>
+            {% endif %}
+        {% endfor %}
+
+        {% if pagination.page < pagination.pages - 2 %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#">...</a>
+        </li>
+        {% endif %}
+
+        {% if pagination.pages > 1 %}
+        <li class="page-item {% if pagination.page == pagination.pages %}active{% endif %}">
+            <a class="page-link" href="{{ url_for('main.consulta_muros', page=pagination.pages) }}">{{ pagination.pages }}</a>
+        </li>
+        {% endif %}
+
+        {% if pagination.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="{{ url_for('main.consulta_muros', page=pagination.next_num, search=search) }}">
+                <i class="bi bi-chevron-right" style="color: #111;"></i>
+            </a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#"><i class="bi bi-chevron-right" style="color: #111;"></i></a>
+        </li>
+        {% endif %}
+    </ul>
+</nav>
+
+
 <style>
-    .pagination-number {
-        cursor: pointer;
-        padding: 5px 10px;
-        margin: 0 2px;
-        border: 1px solid #ccc;
-        border-radius: 3px;
-    }
-    
-    .pagination-number.active {
-        background-color: rgb(21, 110, 243);
-        color: white;
-        
-    }
-    .pagination-numbers{
-        margin-top: 3.5px;
-        
-    }
-    
-    .ellipsis {
-        padding: 5px 10px;
-        color: #aaa;
-        cursor: default;
-    }
-    
-    .pagination-btn{
-        border: 1px solid #ccc;
-        width: 30px;
-        height: 30px;
-        margin-bottom: 2px;
-    }
 
+    .pagination{
+        width: 5%;
+        margin-left:60%;
+        margin-top: -5px;
+    }
+    .pagination .page-link {
+        font-size: 16px; 
+        padding: 5px 10px; 
+    }
+    .pagination .page-item.active .page-link {
+        font-size: 16px;
+    }
+    .pagination .page-item.active .page-link {
+        background-color: #1354e0; 
+        color: #fff; 
+        border-color: #111;
+  
+    }
+    
 </style>
-
-<div class="paginado">
-    <button class="pagination-btn" id="prev-page">
-        <i class="bi bi-chevron-left" style="color: #111;"></i>
-    </button>
-    <div id="pagination-numbers" class="pagination-numbers">
-        <!-- Los números de página se cargarán aquí -->
-    </div>
-    <button class="pagination-btn" id="Pagina_sig">
-        <i class="bi bi-chevron-right" style="color: #111;"></i>
-    </button>
-</div>
