--- a/control_inventario/app/templates/productos/consulta_producto.html
+++ b/control_inventario/app/templates/productos/consulta_producto.html
@@ -93,8 +93,9 @@
     data-ubicacion="{{ producto.ubicacion }}" 
     data-categoria="{{ producto.id_categoria }}"> <!-- Esto debería ser "Sanitarios" -->
     <i class="bi bi-arrow-clockwise" id="i"></i>
-</button>
+</button>                       {% if session.get('privilegio') == 'Administrador' %}
                                 <button type="submit" class="btn btn-danger" id="btneliminar" data-bs-toggle="modal" data-bs-target="#eliminarP" value="{{ producto.id_producto }}" data-id="{{ producto.id_producto }}"><i class="bi bi-trash3-fill"></i></button>
+                                {% endif %}
                                 <button type="submit" class="btn btn-success" id="btnentradas" data-bs-toggle="modal" data-bs-target="#editarModalProducto" value="#"><i class="bi bi-box-arrow-left"></i></button>
                                 <button type="submit" class="btn btn-danger" id="btneliminar" data-bs-toggle="modal" data-bs-target="#eliminarP" value="{{ producto.id_producto }}" data-id="{{ producto.id_producto }}"><i class="bi bi-box-arrow-right"></i></button>
                                 <button type="button" id="btnactualizar"  class="btn btn-primary"onclick="window.location.href='{{ url_for('main.descargar_etiqueta_producto', producto_id=producto.id_producto) }}'">
@@ -123,51 +124,98 @@
 
 </main>
 
+
+
+
+
+
+<nav aria-label="Page navigation">
+    <ul class="pagination">
+        {% if pagination.has_prev %}
+        <li class="page-item">
+            <a class="page-link" href="{{ url_for('main.consulta_productos', page=pagination.prev_num, search=search) }}">
+                <i class="bi bi-chevron-left" style="color: #111;"></i>
+            </a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#"><i class="bi bi-chevron-left" style="color: #111;"></i></a>
+        </li>
+        {% endif %}
+
+        {# Siempre muestra la primera página #}
+        <li class="page-item {% if pagination.page == 1 %}active{% endif %}">
+            <a class="page-link" href="{{ url_for('main.consulta_productos', page=1) }}">1</a>
+        </li>
+
+        {# Muestra "..." si hay un salto entre la primera página y las páginas visibles #}
+        {% if pagination.page > 3 %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#">...</a>
+        </li>
+        {% endif %}
+
+        {# Muestra las páginas cercanas a la página actual #}
+        {% for page_num in range(pagination.page - 1, pagination.page + 1) %}
+            {% if page_num > 1 and page_num < pagination.pages %}
+            <li class="page-item {% if page_num == pagination.page %}active{% endif %}">
+                <a class="page-link" href="{{ url_for('main.consulta_productos', page=page_num) }}">{{ page_num }}</a>
+            </li>
+            {% endif %}
+        {% endfor %}
+
+        {# Muestra "..." si hay un salto entre las páginas visibles y la última página #}
+        {% if pagination.page < pagination.pages - 2 %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#">...</a>
+        </li>
+        {% endif %}
+
+        {# Siempre muestra la última página #}
+        {% if pagination.pages > 1 %}
+        <li class="page-item {% if pagination.page == pagination.pages %}active{% endif %}">
+            <a class="page-link" href="{{ url_for('main.consulta_productos', page=pagination.pages) }}">{{ pagination.pages }}</a>
+        </li>
+        {% endif %}
+
+        {% if pagination.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="{{ url_for('main.consulta_productos', page=pagination.next_num, search=search) }}">
+                <i class="bi bi-chevron-right" style="color: #111;"></i>
+            </a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#"><i class="bi bi-chevron-right" style="color: #111;"></i></a>
+        </li>
+        {% endif %}
+    </ul>
+</nav>
+
+
 <style>
-    .pagination-number {
-        cursor: pointer;
-        padding: 5px 10px;
-        margin: 0 2px;
-        border: 1px solid #ccc;
-        border-radius: 3px;
-    }
-    
-    .pagination-number.active {
-        background-color: rgb(21, 110, 243);
-        color: white;
-        
-    }
-    .pagination-numbers{
-        margin-top: 3.5px;
-        
-    }
-    
-    .ellipsis {
-        padding: 5px 10px;
-        color: #aaa;
-        cursor: default;
-    }
-    
-    .pagination-btn{
-        border: 1px solid #ccc;
-        width: 30px;
-        height: 30px;
-        margin-bottom: 2px;
-    }
 
+    .pagination{
+        width: 5%;
+        margin-left:74%;
+        margin-top: -40px;
+    }
+    .pagination .page-link {
+        font-size: 16px; /* Cambia el tamaño del texto */
+        padding: 5px 10px; /* Reduce el tamaño del padding */
+    }
+    .pagination .page-item{
+        margin: 0 3px;
+        
+    }
+    .pagination .page-item.active .page-link {
+        font-size: 16px;
+    }
+    .pagination .page-item.active .page-link {
+        background-color: rgb(48, 122, 190); /* Color de fondo para el activo */
+        color: #fff; 
+        border-color: rgb(48, 122, 190);
+  
+    }
+    
 </style>
-
-<div class="paginado">
-    <button class="pagination-btn" id="prev-page">
-        <i class="bi bi-chevron-left" style="color: #111;"></i>
-    </button>
-    <div id="pagination-numbers" class="pagination-numbers">
-        <!-- Los números de página se cargarán aquí -->
-    </div>
-    <button class="pagination-btn" id="Pagina_sig">
-        <i class="bi bi-chevron-right" style="color: #111;"></i>
-    </button>
-</div>
-
-
-
