--- a/control_inventario/app/templates/productos/productos.html
+++ b/control_inventario/app/templates/productos/productos.html
@@ -71,30 +71,34 @@
                         <li><a href="/consulta_vitroblocks">Vitroblock</a></li>
                     </ul>
                 </li>
+                {% if session.get('privilegio') == 'Administrador' %}
                 <a href="/consulta_proveedores" class="scroll"><i class="bi bi-people-fill"></i></a>
+                {% endif %}
+
+                {% if session.get('privilegio') == 'Administrador' %}
                 <a href="/consulta_categorias" class="scroll"><i class="bi bi-bookmark-fill"></i></a>
+                {% endif %}
+
                 <a href="/entradas" class="scroll"><i class="bi bi-cart-plus-fill"></i></a>
                 <a href="/salidas" class="scroll"><i class="bi bi-cart-check-fill"></i></a>
+
+                {% if session.get('privilegio') == 'Administrador' %}
                 <a href="/consulta_usuarios" class="scroll"><i class="bi bi-person-fill-add" style="font-size: 1.3em; margin: 0 3px 0 0;"></i></a>
-                <a class="scroll" href="{{ url_for('main.logout') }}"><i class="bi bi-power"></i></a>
+                {% endif %}
                 
-
-
+                <a class="scroll" href="{{ url_for('main.logout') }}"><i class="bi bi-power"></i></a>
                 
             </ul>
         </div>
         
-        
-        
-        {% include 'productos/consulta_producto.html'%}
-        {% include 'productos/registrar_producto.html' %}
-        {% include 'productos/actualizar_productos.html' %}
-        {% include 'productos/eliminar_producto.html' %}
-
-        
-
-        
     </div>
+
+    {% include 'productos/consulta_producto.html'%}
+    {% include 'productos/registrar_producto.html' %}
+    {% include 'productos/actualizar_productos.html' %}
+    {% include 'productos/eliminar_producto.html' %}
+
+    
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -105,6 +109,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.17/jspdf.plugin.autotable.min.js"></script>
     <script src="/static/js/paginacion.js"></script>
+
+    
+
 
     
     
