--- a/control_inventario/app/templates/muros/actualizar_muros.html
+++ b/control_inventario/app/templates/muros/actualizar_muros.html
@@ -7,7 +7,7 @@
             </div>
             <div class="modal-body">
                 <form action="/actualizar_muros" method="post" onsubmit="return validarFormularioproductoAct()">
-                    <input type="hidden" id="editarproductoId" name="id_producto">
+                    <input type="hidden" id="editarproductoId" name="editarproductoId">
                     <div class="mb-3">
                         <label for="medidaeditar" class="form-label">Media</label>
 
