--- a/control_inventario/app/templates/salidas/salidas.html
+++ b/control_inventario/app/templates/salidas/salidas.html
@@ -97,6 +97,7 @@
         
         
         {% include 'salidas/consulta_salidas.html'%}
+        {% include 'salidas/eliminar_salidas.html' %}
         
         
 
@@ -112,6 +113,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.17/jspdf.plugin.autotable.min.js"></script>
     <script src="/static/js/paginacion.js"></script>
+    <script src="/static/js/eliminar_salidas.js" ></script>
 
     
     
