--- a/control_inventario/app/templates/vitroblocks/vitroblock.html
+++ b/control_inventario/app/templates/vitroblocks/vitroblock.html
@@ -90,8 +90,10 @@
     
     {% include 'vitroblocks/consulta_vitroblocks.html' %}
     {% include 'vitroblocks/registrar_vitroblock.html' %}
+    {% include 'salidas/registro_salidas_vitroblock.html' %}
     {% include 'vitroblocks/actualizar_vitroblock.html' %}
     {% include 'vitroblocks/eliminar_vitroblock.html' %}
+    
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -100,7 +102,7 @@
     <script src="/static/js/vitroblock.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.17/jspdf.plugin.autotable.min.js"></script>
-
+    <script src="/static/js/salidas_vitroblock.js" ></script>
     
     
 
