--- a/control_inventario/app/templates/adhesivos/consulta_adhesivos.html
+++ b/control_inventario/app/templates/adhesivos/consulta_adhesivos.html
@@ -73,7 +73,15 @@
                             <td>{{adhesivo.categoria_nombre}}</td>
                             <td>
                                 <button type="submit" class="btn btn-primary" id="btnactualizar" data-bs-toggle="modal" data-bs-target="#editarModalProductoAdhesivos" data-id="{{ adhesivo.id_adhesivos }}"  data-proveedor="{{ adhesivo.id_proveedor }}" data-producto="{{adhesivo.nombre}}" data-kilogramos="{{ adhesivo.kilogramos }}" data-existencias="{{ adhesivo.existencia }}"  data-precio="{{adhesivo.precio}}" data-ubicacion="{{adhesivo.ubicacion}}" data-categoria="{{adhesivo.id_categoria}}" value="#"><i class="bi bi-arrow-clockwise"></i></button>
+                                {% if session.get('privilegio') == 'Administrador' %}
                                 <button type="submit" class="btn btn-danger" id="btneliminar" data-bs-toggle="modal" data-bs-target="#eliminarA" value="{{ adhesivo.id_adhesivos }}" data-id="{{ adhesivo.id_adhesivos }}"><i class="bi bi-trash3-fill"></i></button>
+                                {% endif %}
+                                <button type="submit" class="btn btn-success" id="btnentradas" data-bs-toggle="modal" data-bs-target="#Entradas" value="#"><i class="bi bi-box-arrow-left"></i></button>
+                                <button type="submit" class="btn btn-danger" id="btnsalidas" data-bs-toggle="modal" data-bs-target="#Salidas" data-id="{{ adhesivo.id_adhesivos }}"  data-color="{{ adhesivo.nombre }}" 
+                                data-proveedor="{{ adhesivo.id_proveedor }}"  
+                                data-kilogramos="{{ adhesivo.kilogramos }}" 
+                                data-categoria="{{ adhesivo.id_categoria }}" ><i class="bi bi-box-arrow-right"></i></button>
+                                
                                 <button type="button" id="btnactualizar"  class="btn btn-primary"onclick="window.location.href='{{ url_for('main.descargar_etiqueta_adhesivo', adhesivo_id=adhesivo.id_adhesivos) }}'">
                                     <i class="bi bi-printer-fill"></i>
                                 </button>
