--- a/control_inventario/app/templates/productos/productos.html
+++ b/control_inventario/app/templates/productos/productos.html
@@ -92,11 +92,19 @@
         </div>
         
     </div>
-
+    {% include 'entradas/registro_entradas.html' %}
+    
     {% include 'productos/consulta_producto.html'%}
+    {% include 'salidas/registro_salidas.html' %}
     {% include 'productos/registrar_producto.html' %}
+    
     {% include 'productos/actualizar_productos.html' %}
     {% include 'productos/eliminar_producto.html' %}
+    
+
+    
+    
+
 
     
 
@@ -109,6 +117,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.17/jspdf.plugin.autotable.min.js"></script>
     <script src="/static/js/paginacion.js"></script>
+    <script src="/static/js/entradas.js"></script>
+    <script src="/static/js/salidas.js"></script>
 
     
 
