--- a/control_inventario/app/templates/salidas/consulta_salidas.html
+++ b/control_inventario/app/templates/salidas/consulta_salidas.html
@@ -40,62 +40,29 @@
                 <table  class="table table-striped  table-sm" id="tabla_productos">
                     <thead>
                         <tr>
-                            <th scope="col">Medida</th>
-                            <th scope="col">Proveedor</th>
                             <th scope="col">Nombre</th>
-                            <th scope="col">Calidad</th>
-                            <th scope="col">Existencia</th>
-                            <th scope="col">Rotas</th>
-                            <th scope="col">Precio</th>
-                            <th scope="col">Embalaje</th>
-                            <th scope="col">Ubicación</th>
-                            <th scope="col">Categoría</th>
+                            <th scope="col">Salida</th>
+                            <th scope="col">Fecha</th>
+                            <th scope="col">Destino</th>
+                            <th scope="col">Estatus</th>
                             <th scope="col">Acciones</th>
                         </tr>
                     </thead>
                     <tbody id="product-table-body">
-                        {% for producto in productos %}
+                        {% for salida in salidas %}
                         <tr>
                             
-                            <td>{{producto.medidas}}</td>
-                            <td>{{producto.proveedor_nombre}}</td>
-                            <td>{{producto.producto}}</td>
-                            <td>{{producto.calidad}}</td>
+                            <td style="white-space: pre-wrap;">{{salida.nombre}}</td>
+                            <td>{{salida.salida}}</td>
+                            <td >{{salida.fecha}}</td>
+                            <td >{{salida.destino}}</td>
+                            <td>{{salida.estatus}}</td>
                             <td>
-                                {% if producto.existencias < 10 %}
-                                    <span class="circulo-rojo">{{ producto.existencias }}</span>
-                                {% else %}
-                                    {{ producto.existencias }}
+                                {% if session.get('privilegio') == 'Administrador' %}
+                                <button type="submit" class="btn btn-danger" id="btneliminar" data-bs-toggle="modal" data-bs-target="#eliminarSalidas" value="{{ salida.id_salida }}" data-id="{{ salida.id_salida }}"><i class="bi bi-trash3-fill"></i></button>
                                 {% endif %}
                             </td>
-                            <td>{{producto.rotas}}</td>
-                            <td>{{producto.precio}}</td>
-                            <td>{{producto.embalaje}}</td>
-                            <td>{{producto.ubicacion}}</td>
-                            <td>{{producto.categoria_nombre}}</td>
-                            <td>
-                                <button type="button" class="btn btn-primary" id="btnactualizar" 
-    data-bs-toggle="modal" data-bs-target="#editarModalProducto"
-    data-id="{{ producto.id_producto }}" 
-    data-medidas="{{ producto.medidas }}" 
-    data-proveedor="{{ producto.id_proveedor }}"  
-    data-producto="{{ producto.producto }}" 
-    data-calidad="{{ producto.calidad }}" 
-    data-existencias="{{ producto.existencias }}" 
-    data-rotas="{{ producto.rotas }}" 
-    data-precio="{{ producto.precio }}" 
-    data-embalaje="{{ producto.embalaje }}" 
-    data-ubicacion="{{ producto.ubicacion }}" 
-    data-categoria="{{ producto.id_categoria }}"> <!-- Esto debería ser "Sanitarios" -->
-    <i class="bi bi-arrow-clockwise" id="i"></i>
-</button>
-                                <button type="submit" class="btn btn-danger" id="btneliminar" data-bs-toggle="modal" data-bs-target="#eliminarP" value="{{ producto.id_producto }}" data-id="{{ producto.id_producto }}"><i class="bi bi-trash3-fill"></i></button>
-                                 <button type="button" id="btnactualizar"  class="btn btn-primary"onclick="window.location.href='{{ url_for('main.descargar_etiqueta_producto', producto_id=producto.id_producto) }}'">
-                                    <i class="bi bi-printer-fill"></i>
-                                 </button> 
-
-            
-                            </td>
+                            
                         </tr>
                         {% endfor %}
                         
