--- a/control_inventario/app/templates/tinacos/consulta_tinacos.html
+++ b/control_inventario/app/templates/tinacos/consulta_tinacos.html
@@ -80,9 +80,18 @@
                             <td>
                                 
                                 <button type="submit" class="btn btn-primary" id="btnactualizar" data-bs-toggle="modal" data-bs-target="#editarModalProductoTinacos" data-id="{{ tinaco.id_tinaco }}"  data-proveedor="{{ tinaco.id_proveedor }}" data-producto="{{tinaco.nombre}}" data-litros="{{tinaco.litros}}" data-color="{{tinaco.color}}" data-existencias="{{tinaco.existencias}}" data-precio="{{tinaco.precio}}" data-rotas="{{ tinaco.rotas }}" data-ubicacion="{{tinaco.ubicacion}}" data-categoria="{{tinaco.id_categoria}}" value="#"><i class="bi bi-arrow-clockwise"></i></button>
+                                {% if session.get('privilegio') == 'Administrador' %}
                                 <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#eliminarTinacos" value="{{ tinaco.id_tinaco }}" data-id="{{ tinaco.id_tinaco }}">
                                     <i class="bi bi-trash3-fill"></i>
                                 </button>
+                                {% endif %}
+                                <button type="submit" class="btn btn-danger" id="btnsalidas" data-bs-toggle="modal" data-bs-target="#Salidas" data-id="{{ tinaco.id_tinaco }}" 
+                                data-proveedor="{{ tinaco.id_proveedor }}"  
+                                data-nombre="{{ tinaco.nombre }}" 
+                                data-litros="{{ tinaco.litros }}" 
+                                data-color="{{ tinaco.color }}" 
+                                data-categoria="{{ tinaco.id_categoria }}" ><i class="bi bi-box-arrow-right"></i></button>
+                                
                                 <button type="button" id="btnactualizar"  class="btn btn-primary"onclick="window.location.href='{{ url_for('main.descargar_etiqueta_tinaco', tinaco_id=tinaco.id_tinaco) }}'">
                                     <i class="bi bi-printer-fill"></i>
                                  </button>
