--- a/control_inventario/app/templates/tinacos/tinacos.html
+++ b/control_inventario/app/templates/tinacos/tinacos.html
@@ -87,8 +87,9 @@
 
     {% include 'tinacos/eliminar_tinaco.html' %}
     {% include 'tinacos/consulta_tinacos.html'%}
-    {%include 'tinacos/registrar_tinacos.html'%}
+    {% include 'tinacos/registrar_tinacos.html'%}
     {% include 'tinacos/actualizar_tinaco.html' %}
+    {% include 'salidas/registro_salidas_tinacos.html'  %}
     
     
     
@@ -99,7 +100,7 @@
     <script src="/static/js/tinacos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.17/jspdf.plugin.autotable.min.js"></script>
-
+    <script src="/static/js/salidas_tinacos.js" ></script>
     
     
 
