--- a/control_inventario/app/templates/adhesivos/adhesivos.html
+++ b/control_inventario/app/templates/adhesivos/adhesivos.html
@@ -89,7 +89,7 @@
     {% include 'salidas/registro_salidas_adhesivos.html' %}
     {% include 'adhesivos/eliminar_adhesivos.html' %}
     {% include 'adhesivos/actualizar_adhesivos.html' %}
-    {% include 'entradas/registro_entradas.html' %}
+    {% include 'entradas/registro_adhesivos_entradas.html' %}
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -99,7 +99,7 @@
     <script src="/static/js/jsadhesivos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.17/jspdf.plugin.autotable.min.js"></script>
-    <script src="/static/js/entradas.js"></script>
+    <script src="/static/js/entradas_adhesivos.js"></script>
     <script src="/static/js/salidas_adhesivos.js"></script>
     
     
