--- a/control_inventario/app/templates/salidas/registro_salidas_muros.html
+++ b/control_inventario/app/templates/salidas/registro_salidas_muros.html
@@ -6,7 +6,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="/registro_productos_salidas" method="post" >
+                <form action="/registro_muros_salidas" method="post" >
                     <input type="hidden" id="id_producto" name="id_producto">
                     <div class="mb-3">
                         <label for="medida" class="form-label">Media</label>
