--- a/control_inventario/app/templates/adhesivos/consulta_adhesivos.html
+++ b/control_inventario/app/templates/adhesivos/consulta_adhesivos.html
@@ -76,7 +76,16 @@
                                 {% if session.get('privilegio') == 'Administrador' %}
                                 <button type="submit" class="btn btn-danger" id="btneliminar" data-bs-toggle="modal" data-bs-target="#eliminarA" value="{{ adhesivo.id_adhesivos }}" data-id="{{ adhesivo.id_adhesivos }}"><i class="bi bi-trash3-fill"></i></button>
                                 {% endif %}
-                                <button type="submit" class="btn btn-success" id="btnentradas" data-bs-toggle="modal" data-bs-target="#Entradas" value="#"><i class="bi bi-box-arrow-left"></i></button>
+
+                                <button type="submit" class="btn btn-success" id="btnentradas" data-bs-toggle="modal" data-bs-target="#Entradas"
+                                data-id="{{ adhesivo.id_adhesivos }}"  data-color="{{ adhesivo.nombre }}" 
+                                data-proveedor="{{ adhesivo.id_proveedor }}"  
+                                data-kilogramos="{{ adhesivo.kilogramos }}" 
+                                data-categoria="{{ adhesivo.id_categoria }}"
+                                value="#"><i class="bi bi-box-arrow-left"></i></button>
+                                
+
+
                                 <button type="submit" class="btn btn-danger" id="btnsalidas" data-bs-toggle="modal" data-bs-target="#Salidas" data-id="{{ adhesivo.id_adhesivos }}"  data-color="{{ adhesivo.nombre }}" 
                                 data-proveedor="{{ adhesivo.id_proveedor }}"  
                                 data-kilogramos="{{ adhesivo.kilogramos }}" 
