--- a/control_inventario/app/templates/entradas/consulta_entradas.html
+++ b/control_inventario/app/templates/entradas/consulta_entradas.html
@@ -40,62 +40,25 @@
                 <table  class="table table-striped  table-sm" id="tabla_productos">
                     <thead>
                         <tr>
-                            <th scope="col">Medida</th>
-                            <th scope="col">Proveedor</th>
                             <th scope="col">Nombre</th>
-                            <th scope="col">Calidad</th>
-                            <th scope="col">Existencia</th>
-                            <th scope="col">Rotas</th>
-                            <th scope="col">Precio</th>
-                            <th scope="col">Embalaje</th>
-                            <th scope="col">Ubicación</th>
-                            <th scope="col">Categoría</th>
+                            <th scope="col">Entrada</th>
+                            <th scope="col">Fecha</th>
+                            
                             <th scope="col">Acciones</th>
                         </tr>
                     </thead>
                     <tbody id="product-table-body">
-                        {% for producto in productos %}
+                        {% for entrada in entradas %}
                         <tr>
                             
-                            <td>{{producto.medidas}}</td>
-                            <td>{{producto.proveedor_nombre}}</td>
-                            <td>{{producto.producto}}</td>
-                            <td>{{producto.calidad}}</td>
+                            <td>{{entrada.nombre}}</td>
+                            <td>{{entrada.entrada}}</td>
+                            <td>{{entrada.fecha}}</td>
                             <td>
-                                {% if producto.existencias < 10 %}
-                                    <span class="circulo-rojo">{{ producto.existencias }}</span>
-                                {% else %}
-                                    {{ producto.existencias }}
-                                {% endif %}
-                            </td>
-                            <td>{{producto.rotas}}</td>
-                            <td>{{producto.precio}}</td>
-                            <td>{{producto.embalaje}}</td>
-                            <td>{{producto.ubicacion}}</td>
-                            <td>{{producto.categoria_nombre}}</td>
-                            <td>
-                                <button type="button" class="btn btn-primary" id="btnactualizar" 
-    data-bs-toggle="modal" data-bs-target="#editarModalProducto"
-    data-id="{{ producto.id_producto }}" 
-    data-medidas="{{ producto.medidas }}" 
-    data-proveedor="{{ producto.id_proveedor }}"  
-    data-producto="{{ producto.producto }}" 
-    data-calidad="{{ producto.calidad }}" 
-    data-existencias="{{ producto.existencias }}" 
-    data-rotas="{{ producto.rotas }}" 
-    data-precio="{{ producto.precio }}" 
-    data-embalaje="{{ producto.embalaje }}" 
-    data-ubicacion="{{ producto.ubicacion }}" 
-    data-categoria="{{ producto.id_categoria }}"> <!-- Esto debería ser "Sanitarios" -->
-    <i class="bi bi-arrow-clockwise" id="i"></i>
-</button>
-                                <button type="submit" class="btn btn-danger" id="btneliminar" data-bs-toggle="modal" data-bs-target="#eliminarP" value="{{ producto.id_producto }}" data-id="{{ producto.id_producto }}"><i class="bi bi-trash3-fill"></i></button>
-                                 <button type="button" id="btnactualizar"  class="btn btn-primary"onclick="window.location.href='{{ url_for('main.descargar_etiqueta_producto', producto_id=producto.id_producto) }}'">
-                                    <i class="bi bi-printer-fill"></i>
-                                 </button> 
+                                <button type="submit" class="btn btn-danger" id="btneliminar" data-bs-toggle="modal" data-bs-target="#eliminarEntradas" value="{{ entrada.id_entrada }}" data-id="{{ entrada.id_entrada }}"><i class="bi bi-trash3-fill"></i></button>
 
-            
                             </td>
+                            
                         </tr>
                         {% endfor %}
                         
@@ -116,51 +79,91 @@
 
 </main>
 
+<nav aria-label="Page navigation">
+    <ul class="pagination">
+        {% if pagination.has_prev %}
+        <li class="page-item" id="atras">
+            <a class="page-link" href="{{ url_for('main.entradas', page=pagination.prev_num, search=search) }}">
+                <i class="bi bi-chevron-left" style="color: #111;"></i>
+            </a>
+        </li>
+        {% else %}
+        <li class="page-item disabled" id="atras">
+            <a class="page-link" href="#"><i class="bi bi-chevron-left" style="color: #111;"></i></a>
+        </li>
+        {% endif %}
+
+        <li class="page-item {% if pagination.page == 1 %}active{% endif %}">
+            <a class="page-link" href="{{ url_for('main.entradas', page=1) }}">1</a>
+        </li>
+
+        {% if pagination.page > 3 %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#">...</a>
+        </li>
+        {% endif %}
+
+        {% for page_num in range(pagination.page - 1, pagination.page + 1) %}
+            {% if page_num > 1 and page_num < pagination.pages %}
+            <li class="page-item {% if page_num == pagination.page %}active{% endif %}">
+                <a class="page-link" href="{{ url_for('main.entradas', page=page_num) }}">{{ page_num }}</a>
+            </li>
+            {% endif %}
+        {% endfor %}
+
+        {% if pagination.page < pagination.pages - 2 %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#">...</a>
+        </li>
+        {% endif %}
+
+        {% if pagination.pages > 1 %}
+        <li class="page-item {% if pagination.page == pagination.pages %}active{% endif %}">
+            <a class="page-link" href="{{ url_for('main.entradas', page=pagination.pages) }}">{{ pagination.pages }}</a>
+        </li>
+        {% endif %}
+
+        {% if pagination.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="{{ url_for('main.entradas', page=pagination.next_num, search=search) }}">
+                <i class="bi bi-chevron-right" style="color: #111;"></i>
+            </a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" href="#"><i class="bi bi-chevron-right" style="color: #111;"></i></a>
+        </li>
+        {% endif %}
+    </ul>
+</nav>
+
+
 <style>
-    .pagination-number {
-        cursor: pointer;
-        padding: 5px 10px;
-        margin: 0 2px;
-        border: 1px solid #ccc;
-        border-radius: 3px;
-    }
-    
-    .pagination-number.active {
-        background-color: rgb(21, 110, 243);
-        color: white;
-        
-    }
-    .pagination-numbers{
-        margin-top: 3.5px;
-        
-    }
-    
-    .ellipsis {
-        padding: 5px 10px;
-        color: #aaa;
-        cursor: default;
-    }
-    
-    .pagination-btn{
-        border: 1px solid #ccc;
-        width: 30px;
-        height: 30px;
-        margin-bottom: 2px;
-    }
 
+    .pagination{
+        width: 5%;
+        margin-left:74%;
+        margin-top: -55px;
+    }
+    .pagination .page-link {
+        font-size: 16px; 
+        padding: 5px 10px; 
+    }
+    .pagination .page-item{
+        margin: 0 3px;
+        
+    }
+    #atras{
+        margin: 0 15px;
+    }
+    .pagination .page-item.active .page-link {
+        font-size: 16px;
+    }
+    .pagination .page-item.active .page-link {
+        background-color: rgb(48, 122, 190); 
+        color: #fff; 
+        border-color: rgb(48, 122, 190);
+  
+    }
+    
 </style>
-
-<div class="paginado">
-    <button class="pagination-btn" id="prev-page">
-        <i class="bi bi-chevron-left" style="color: #111;"></i>
-    </button>
-    <div id="pagination-numbers" class="pagination-numbers">
-        <!-- Los números de página se cargarán aquí -->
-    </div>
-    <button class="pagination-btn" id="Pagina_sig">
-        <i class="bi bi-chevron-right" style="color: #111;"></i>
-    </button>
-</div>
-
-
-
