--- a/control_inventario/app/templates/entradas/registro_productos_entradas.html
+++ b/control_inventario/app/templates/entradas/registro_productos_entradas.html
@@ -6,15 +6,16 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="/registro_productos" method="post" >
+                <form action="/registro_productos_entradas" method="post" >
+                    <input type="hidden" id="id_producto" name="id_producto">
                     <div class="mb-3">
                         <label for="medida" class="form-label">Media</label>
-                        <input type="txt" class="form-control" id="medida" name="medida">
+                        <input type="txt" class="form-control" id="medida" name="medida" readonly>
                         <div class="invalid-feedback" id="medidaError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="proveedores" class="form-label">Proveedor</label><br>
-                        <select id="proveedores" name="proveedores" class="form-control">
+                        <select id="proveedores" name="proveedores" class="form-control" readonly >
                             <option value="" id="proveedores">Selecciona una opción</option>
                             {% for proveedor in proveedores %}
                             <option value="{{ proveedor.id_proveedor }}">{{ proveedor.nombre }}</option>
@@ -24,18 +25,18 @@
                     </div>
                     <div class="mb-3">
                         <label for="producto" class="form-label">Nombre</label>
-                        <input type="txt" class="form-control" id="producto" name="producto">
+                        <input type="txt" class="form-control" id="producto" name="producto" readonly>
                         <div class="invalid-feedback" id="productoError"></div>
                     </div>
                     <div class="mb-3">
                         <label for="calidad" class="form-label">Calidad</label>
-                        <input type="txt" class="form-control" id="calidad" name="calidad">
+                        <input type="txt" class="form-control" id="calidad" name="calidad" readonly>
                         <div class="invalid-feedback" id="calidadError"></div>
                     </div>
                     
                     <div class="mb-3">
                         <label for="categorias" class="form-label">Categoría</label><br>
-                        <select id="categorias" name="categorias" class="form-control">
+                        <select id="categorias" name="categorias" class="form-control" readonly>
                             <option value="" id="categorias">Selecciona una opción</option>
                             {% for categoria in categorias %}
                             <option value="{{ categoria.id_categoria }}">{{ categoria.nombre }}</option>
@@ -53,6 +54,8 @@
                         <input type="date" class="form-control" id="fecha" name="fecha">
                         <div class="invalid-feedback" id="fechaError"></div>
                     </div>
+                    
+                   
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                         <button type="submit" class="btn btn-danger" id="Registrar" name="Registrar">Registrar</button>
@@ -61,4 +64,4 @@
             </div>
         </div>
     </div>
-  </div>
+</div>
