--- a/control_inventario/app/templates/muros/consulta_muros.html
+++ b/control_inventario/app/templates/muros/consulta_muros.html
@@ -78,11 +78,19 @@
                             <td>{{muro.categoria_nombre}}</td>
 
                             <td>
-                                <button type="submit" class="btn btn-primary" id="btnactualizar" data-bs-toggle="modal" data-bs-target="#editarModalProductoMuros" data-id="{{ muro.id_producto }}" data-medidas="{{ muro.medidas }}" data-proveedor="{{ muro.id_proveedor }}" data-producto="{{muro.producto}}" data-calidad="{{ muro.calidad }}" data-existencias="{{ muro.existencias }}" data-rotas="{{muro.rotas}}" data-precio="{{muro.precio}}" data-embalaje="{{muro.embalaje}}" data-ubicacion="{{muro.ubicacion}}" data-categoria="{{muro.id_categoria}}" value="#"><i class="bi bi-arrow-clockwise"></i></button>
+                                <button type="submit" class="btn btn-primary" id="btnactualizar" data-bs-toggle="modal" data-bs-target="#editarModalProductoMuros" data-id="{{ muro.id_producto }}" data-medidas="{{ muro.medidas }}" data-proveedor="{{muro.id_proveedor}}" data-producto="{{muro.producto}}" data-calidad="{{ muro.calidad }}" data-existencias="{{ muro.existencias }}" data-rotas="{{muro.rotas}}" data-precio="{{muro.precio}}" data-embalaje="{{muro.embalaje}}" data-ubicacion="{{muro.ubicacion}}" data-categoria="{{muro.id_categoria}}" value="#"><i class="bi bi-arrow-clockwise"></i></button>
                                 {% if session.get('privilegio') == 'Administrador' %}
                                 <button type="submit" class="btn btn-danger" id="btneliminar" data-bs-toggle="modal" data-bs-target="#eliminarM" value="{{ muro.id_producto }}" data-id="{{ muro.id_producto }}"><i class="bi bi-trash3-fill"></i></button>
                                 {% endif %}
-                                <button type="submit" class="btn btn-success" id="btnentradas" data-bs-toggle="modal" data-bs-target="#Entradas" value="#"><i class="bi bi-box-arrow-left"></i></button>
+
+                                <button type="submit" class="btn btn-success" id="btnentradas" data-bs-toggle="modal" data-bs-target="#Entradas"
+                                data-id="{{ muro.id_producto }}"  data-medidas="{{ muro.medidas }}" 
+                                data-proveedor="{{ muro.id_proveedor }}"  
+                                data-producto="{{ muro.producto }}" 
+                                data-calidad="{{ muro.calidad }}" 
+                                data-categoria="{{ muro.id_categoria }}"value="#"><i class="bi bi-box-arrow-left"></i></button>
+                                
+
                                 <button type="submit" class="btn btn-danger" id="btnsalidas" data-bs-toggle="modal" data-bs-target="#Salidas" data-id="{{ muro.id_producto }}"  data-medidas="{{ muro.medidas }}" 
                                 data-proveedor="{{ muro.id_proveedor }}"  
                                 data-producto="{{ muro.producto }}" 
