--- a/control_inventario/app/templates/muros/muros.html
+++ b/control_inventario/app/templates/muros/muros.html
@@ -84,7 +84,7 @@
             </ul>
         </div>
          
-        {% include 'entradas/registro_entradas.html' %}
+        {% include 'entradas/registro_muros_entradas.html' %}
         {% include 'muros/consulta_muros.html'%}
         {% include 'muros/registrar_muros.html' %}
         {% include 'salidas/registro_salidas_muros.html' %}
@@ -102,7 +102,7 @@
     <script src="/static/js/jsmuros.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.17/jspdf.plugin.autotable.min.js"></script>
-    <script src="/static/js/entradas.js"></script>
+    <script src="/static/js/entradas_muros.js"></script>
     <script src="/static/js/salidas_muros.js"></script>
     
 
