--- a/control_inventario/app/templates/productos/actualizar_productos.html
+++ b/control_inventario/app/templates/productos/actualizar_productos.html
@@ -6,7 +6,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form action="/actualizar_producto" method="post" onsubmit="return validarFormularioproductoA()">
+                <form action="/actualizar_salida" method="post" onsubmit="return validarFormularioproductoA()">
                     <input type="hidden" id="editarproductoId" name="id_producto">
                     <div class="mb-3">
                         <label for="medidaeditar" class="form-label">Media</label>
