--- a/control_inventario/app/templates/productos/productos.html
+++ b/control_inventario/app/templates/productos/productos.html
@@ -92,7 +92,7 @@
         </div>
         
     </div>
-    {% include 'entradas/registro_entradas.html' %}
+    {% include 'entradas/registro_productos_entradas.html' %}
     
     {% include 'productos/consulta_producto.html'%}
     {% include 'salidas/registro_salidas.html' %}
@@ -117,7 +117,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.17/jspdf.plugin.autotable.min.js"></script>
     <script src="/static/js/paginacion.js"></script>
-    <script src="/static/js/entradas.js"></script>
+    <script src="/static/js/modal_entradas.js"></script>
     <script src="/static/js/salidas.js"></script>
 
     
