--- a/control_inventario/app/templates/sanitarios/consulta_sanitarios.html
+++ b/control_inventario/app/templates/sanitarios/consulta_sanitarios.html
@@ -81,6 +81,15 @@
                                     <i class="bi bi-trash3-fill"></i>
                                 </button>
                                 {% endif %}
+
+                                <button type="submit" class="btn btn-success" id="btnentradas" data-bs-toggle="modal" data-bs-target="#Entradas"
+                                data-id="{{ sanitario.id_sanitario }}" 
+                                data-proveedor="{{ sanitario.id_proveedor }}"  
+                                data-nombre="{{ sanitario.nombre }}" 
+                                data-categoria="{{ sanitario.id_categoria }}" 
+                                value="#"><i class="bi bi-box-arrow-left"></i></button>
+
+
                                 <button type="submit" class="btn btn-danger" id="btnsalidas" data-bs-toggle="modal" data-bs-target="#Salidas" data-id="{{ sanitario.id_sanitario }}" 
                                 data-proveedor="{{ sanitario.id_proveedor }}"  
                                 data-nombre="{{ sanitario.nombre }}" 
