--- a/control_inventario/app/templates/sanitarios/sanitarios.html
+++ b/control_inventario/app/templates/sanitarios/sanitarios.html
@@ -83,12 +83,14 @@
         </div>
         
     </div>
+    {% include 'entradas/registro_sanitarios_entradas.html' %}
 
     {% include 'sanitarios/eliminar_sanitarios.html'%}
+    {% include 'salidas/registro_salidas_sanitarios.html' %}
+
     {% include 'sanitarios/consulta_sanitarios.html' %}
     {% include 'sanitarios/registrar_sanitario.html' %}
     {% include 'sanitarios/actualizar_sanitarios.html' %}
-    {% include 'salidas/registro_salidas_sanitarios.html' %}
     
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -99,6 +101,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.17/jspdf.plugin.autotable.min.js"></script>
     <script src="/static/js/salidas_sanitarios.js" ></script>
+    <script src="/static/js/entradas_sanitarios.js" ></script>
     
     
 
