--- a/control_inventario/app/templates/tinacos/consulta_tinacos.html
+++ b/control_inventario/app/templates/tinacos/consulta_tinacos.html
@@ -85,6 +85,16 @@
                                     <i class="bi bi-trash3-fill"></i>
                                 </button>
                                 {% endif %}
+
+                                <button type="submit" class="btn btn-success" id="btnentradas" data-bs-toggle="modal" data-bs-target="#Entradas"
+                                data-id="{{ tinaco.id_tinaco }}" 
+                                data-proveedor="{{ tinaco.id_proveedor }}"  
+                                data-nombre="{{ tinaco.nombre }}" 
+                                data-litros="{{ tinaco.litros }}" 
+                                data-color="{{ tinaco.color }}" 
+                                data-categoria="{{ tinaco.id_categoria }}"
+                                value="#"><i class="bi bi-box-arrow-left"></i></button>
+                                
                                 <button type="submit" class="btn btn-danger" id="btnsalidas" data-bs-toggle="modal" data-bs-target="#Salidas" data-id="{{ tinaco.id_tinaco }}" 
                                 data-proveedor="{{ tinaco.id_proveedor }}"  
                                 data-nombre="{{ tinaco.nombre }}" 
