--- a/control_inventario/app/templates/vitroblocks/consulta_vitroblocks.html
+++ b/control_inventario/app/templates/vitroblocks/consulta_vitroblocks.html
@@ -84,6 +84,19 @@
                                     <i class="bi bi-trash3-fill"></i>
                                 </button>
                                 {% endif %}
+
+
+                                <button type="submit" class="btn btn-success" id="btnentradas" data-bs-toggle="modal" data-bs-target="#Entradas"
+                                data-id="{{ vitroblock.id_vitroblock }}"
+                                data-proveedorV="{{ vitroblock.id_proveedor }}" 
+                                data-tipo="{{ vitroblock.tipo }}"   
+                                data-medidas="{{ vitroblock.medidas }}"  
+                                data-nombre="{{ vitroblock.nombre }}" 
+                                data-categoria="{{ vitroblock.id_categoria }}"
+                                value="#"><i class="bi bi-box-arrow-left"></i></button>
+
+
+
                                 <button type="submit" class="btn btn-danger" id="btnsalidas" data-bs-toggle="modal" data-bs-target="#Salidas" data-id="{{ vitroblock.id_vitroblock }}" 
                                 data-proveedorV="{{ vitroblock.id_proveedor }}" 
                                 data-tipo="{{ vitroblock.tipo }}"   
