--- a/control_inventario/app/templates/vitroblocks/vitroblock.html
+++ b/control_inventario/app/templates/vitroblocks/vitroblock.html
@@ -93,6 +93,7 @@
     {% include 'salidas/registro_salidas_vitroblock.html' %}
     {% include 'vitroblocks/actualizar_vitroblock.html' %}
     {% include 'vitroblocks/eliminar_vitroblock.html' %}
+    {% include 'entradas/registro_vitroblock_entradas.html' %}
     
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -103,6 +104,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.17/jspdf.plugin.autotable.min.js"></script>
     <script src="/static/js/salidas_vitroblock.js" ></script>
+    <script src="/static/js/entradas_vitroblock.js" ></script>
+
     
     
 
